<resources>
    <string name="app_name">PruebaFinalSuperHeroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviar_correo">enviar correo</string>
    <string name="origen">origen</string>
    <string name="poder">poder</string>
    <string name="creación">año de creacion</string>
    <string name="origenn">Origen:</string>
    <string name="poderr">Poder:</string>
    <string name="creacionn">Año de creación:</string>
    <string name="color">Color:</string>
    <string name="traduccion">Traduccion:</string>
    <string name="origen1">Origen:</string>
</resources>